--- a/.github/workflows/iac-scan.yml
+++ b/.github/workflows/iac-scan.yml
@@ -16,7 +16,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4      
+
+      - name: Create reports dir
+        run: mkdir -p reports
+
+      - name: Install tfsec
+        run: |
+          curl -sSL https://raw.githubusercontent.com/aquasecurity/tfsec/master/scripts/install_linux.sh | bash || true
+
+      - name: Run tfsec (Terraform)
+        run: |
+          tfsec iac/terraform --format json --out reports/tfsec.json || true
+
+      - name: Upload tfsec report
+        uses: actions/upload-artifact@v4
+        with:
+          name: tfsec-report
+          path: reports/tfsec.json
+
+
 
       - name: Install tools
         run: |
