--- a/.github/workflows/iac-scan.yml
+++ b/.github/workflows/iac-scan.yml
@@ -2,34 +2,26 @@ name: IaC Scan
 
 on:
   push:
-    branches: [ "main" ]
+    paths:
+      - '**/*.tf'
   pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
+    paths:
+      - '**/*.tf'
 
 jobs:
   tfsec-scan:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Go (needed for tfsec)
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-
-      - name: Run tfsec
-        uses: aquasecurity/tfsec-action@v1.0.3
-        with:
-          soft_fail: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run tfsec (Terraform Security Scan)
+        run: |
+          mkdir -p reports
+          tfsec . --format json --out reports/tfsec.json || true
 
       - name: Upload tfsec report
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: tfsec-report
-          path: ./tfsec.json
-          if-no-files-found: ignore
+          path: reports/tfsec.json
