--- a/.github/workflows/iac-scan.yml
+++ b/.github/workflows/iac-scan.yml
@@ -1,32 +1,44 @@
-name: Terraform Security Scan
+name: tfsec scan
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   tfsec:
+    name: Run tfsec IaC Security Scan
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup tfsec
+      
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.0
+
+      - name: Run tfsec scan
         run: |
-          curl -s https://raw.githubusercontent.com/aquasecurity/tfsec/master/scripts/install_linux.sh | bash
           mkdir -p docs
+          tfsec . --format json > docs/tfsec.json
+          tfsec . --format sarif > tfsec.sarif
 
-      - name: Run tfsec and save report
-        run: |
-          ./tfsec . --format json > docs/tfsec.json
-          cat docs/tfsec.json
+      
+      - name: Upload SARIF results
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: tfsec.sarif
 
+      
       - name: Commit tfsec.json
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add docs/tfsec.json
-          git commit -m "chore: update tfsec report" || echo "No changes to commit"
-          git push
+          git commit -m "chore: update tfsec report [skip ci]" || echo "No changes to commit"
+          git push origin main || echo "No changes to push"
